[gd_scene load_steps=3 format=3 uid="uid://dsq86ej50ss3r"]

[ext_resource type="Theme" uid="uid://bxakjwkc4gbrj" path="res://themes/main_menu_theme.tres" id="1_rsd77"]
[ext_resource type="Script" uid="uid://dd2ltsk68jhkx" path="res://scripts/options_panel.gd" id="2_euqmw"]

[node name="OptionsPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 360.0
offset_top = 31.0
offset_right = -323.0
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rsd77")
script = ExtResource("2_euqmw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="ConfirmButton" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Confirm"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 20

[node name="MasterVolumeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Music"

[node name="MusicVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SfxVolumeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Sounds Effects"

[node name="SfxVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="MarginContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SfxVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
